added speaker photo for Loren

--- a/partner_symposium/src/components/Speakers.astro
+++ b/partner_symposium/src/components/Speakers.astro
@@ -28,7 +28,7 @@
     <h2>Loren Mayor, Chief Operating Officer</h2>
     <div class="">
       <img
-        src=""
+        src="Loren.Mayor.png"
         alt="A headshot of Loren Mayor"
         class="mb-4 w-[300px] md:float-left md:mb-0 md:mr-4"
       />
