--- a/partner_symposium/src/components/Speakers.astro
+++ b/partner_symposium/src/components/Speakers.astro
@@ -5,6 +5,7 @@
     <li><a href="#ariana-bowman">Ariana Bowman</a></li>
     <li><a href="#kerry-cesareo">Kerry Cesareo</a></li>
     <li><a href="#karl-egloff">Karl Egloff</a></li>
+    <li><a href="#will-gartshore">Will Gartshore</a></li>
     <li><a href="#sarah-glaser">Sarah Glaser</a></li>
     <li><a href="#ryan-houlihan">Ryan Houlihan</a></li>
     <li><a href="#macy-rae-kenworthy">Macy Rae Kenworthy</a></li>
@@ -14,9 +15,10 @@
     <li><a href="#megan-onders">Megan Onders</a></li>
     <li><a href="#rebecca-pincus">Rebecca Pincus</a></li>
     <li><a href="#delbert-pungowiy">Delbert Pungowiy</a></li>
+    <li><a href="#lauren-herzer-risi">Lauren Herzer Risi</a></li>
     <li><a href="#meg-symington">Meg Symington</a></li>
-    <li><a href="#annika-terrana">Annika Terrana</a>
-    </li><li><a href="#lynda-walker">Lynda Walker</a></li>
+    <li><a href="#annika-terrana">Annika Terrana</a></li>
+    <li><a href="#lynda-walker">Lynda Walker</a></li>
     <li><a href="#carolyn-weis">Carolyn Weis</a></li>
     <li><a href="#andrew-wiley">Andrew Wiley</a></li>
     <li><a href="#alexis-will">Alexis Will</a></li> 
@@ -336,9 +338,45 @@
   </div>
   <div
     class="my-24 mb-6 flex flex-col justify-between space-y-4"
+    id="will-gartshore"
+  >
+    <h2>Will Gartshore, Senior Director, Policy and Government Affairs, WWF </h2>
+    <div class="">
+      <img
+        src=""
+        alt="A headshot of Will Gartshore"
+        class="mb-4 w-[400px] md:float-left md:mb-0 md:mr-4"
+      />
+      <div class="[&>p]:mb-4">
+        <p>
+          Will spearheads WWF’s government affairs strategy and advocacy with the U.S. Congress. Will spends much of his time liaising with Members of Congress and their staff to educate and inform them about WWF’s priority conservation issues and to encourage them to support policies and funding decisions that benefit nature and wildlife around the globe. Among the legislative accomplishments that Will has led for WWF are the passage of the END Wildlife Trafficking Act, the creation of the Save Vanishing Species semi-postal stamp, and the annual push to protect US government funding for international conservation programs. Prior to joining WWF, Will worked as a writer for the Energy Future Coalition, as a communications consultant for Independent Action PAC and as managing editor of the Greener Business Guide to Washington, DC. Will has also spent over 20 years as a professional actor and has worked in theaters in DC, New York, and around the United States. He graduated summa cum laude with an honors B.A. from the University of Maryland, College Park and has an advanced acting degree from the American Academy of Dramatic Arts (NYC).
+        </p>
+      </div>
+    </div>
+  </div>
+  <div
+    class="my-24 mb-6 flex flex-col justify-between space-y-4"
+    id="lauren-herzer-risi"
+  >
+    <h2>Lauren Herzer Risi, Program Director, Environmental Change and Security Program, Wilson Center</h2>
+    <div class="">
+      <img
+        src=""
+        alt="A headshot of Lauren Herzer Risi"
+        class="mb-4 w-[400px] md:float-left md:mb-0 md:mr-4"
+      />
+      <div class="[&>p]:mb-4">
+        <p>
+          Lauren works with policymakers, practitioners, donors, and researchers to generate innovative, transdisciplinary solutions to development and security challenges related to environmental change and natural resource management. She has authored and edited a number of reports, including: 21st Century Diplomacy: Foreign Policy is Climate Policy; Navigating Complexity: Climate, Migration, and Conflict in a Changing World; After the Disaster: Rebuilding Communities; Backdraft: The Conflict Potential of Climate Change Adaptation and Mitigation; and Our Shared Future: Environmental Pathways to Peace. Lauren is the managing editor of New Security Beat. She also served as a Crisis Corps volunteer with the Peace Corps and FEMA in New Orleans following Hurricane Katrina. Lauren holds a master’s degree in environmental security and peace from the UN-mandated University for Peace in Costa Rica.  
+        </p>
+      </div>
+    </div>
+  </div>
+  <div
+    class="my-24 mb-6 flex flex-col justify-between space-y-4"
     id="carolyn-weis"
   >
-    <h2>Carolyn Weis – Program Director, International Conservation Caucus Foundation</h2>
+    <h2>Carolyn Weis, Program Director, International Conservation Caucus Foundation and Oceans Caucus Foundation</h2>
     <div class="">
       <img
         src=""
