updating home page content for 2025

--- a/partner_symposium/src/pages/index.astro
+++ b/partner_symposium/src/pages/index.astro
@@ -13,18 +13,14 @@ import { Notification } from 'accessible-astro-components'
   <Hero />
   <section class="container">
     <p>
-      We are excited to welcome you to the 2023 Partner Symposium! We hope you are equally excited to join us for a deep dive into our work with people and communities to protect, restore, and nurture the world’s most ecologically important forests and oceans.  
+      We are excited to welcome you to the 2025 Partner Symposium at World Wildlife Fund Headquarters! We hope you are equally excited to join us for an enlightening and engaging experience focused on the future of conservation.  
     </p>
     <br>
     <p>
-      Over the course of our two days together we will explore the innovative ways we are developing and delivering solutions that protect vital ocean and forest ecosystems and the abundance of life they support.  
+      Over the course of our day and a half together, you will hear stories of hope and impact from WWF experts, leaders, and scientists. You’ll also learn how your support is advancing innovative solutions for a more sustainable future—for wildlife, people, and nature—and preparing the next generation of conservation leaders. 
     </p>
     <br>
-    <p>On Monday June 5, all sessions will be held at the WWF Building, aka WWF HQ, aka the “Panda Palace” – and will feature leaders and experts from our Forests and Oceans teams. On Tuesday June 6, we will spend the day in DC, beginning at WWF HQ for a quick breakfast and then boarding a shuttle for a short ride over to the Woodrow Wilson International Center for Scholars. There, we will hear a panel of experts—from WWF and other organizations—discuss ocean conservation policy. We’ll head to the Smithsonian National Museum of Natural History in the afternoon for a visit to Sant Ocean Hall and we will adjourn that afternoon. If you are interested and able, we encourage you to participate in other Capitol Hill Ocean Week (CHOW) activities and events.<a href="https://preconvirtual.com/chow-2023-agenda/">Learn more about CHOW here.</a>
-    </p>
-    <br>
-    <p>
-      Thank you for joining us at the 2023 Partner Symposium and for your commitment to conservation as a supporter of WWF! 
+    <p>Thank you for joining us at the 2025 WWF Partner Symposium and for your commitment to conservation!  
     </p>
     <br>
     <p>  
