working on Agenda and testing for deployment

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -4,7 +4,7 @@ import AgendaItem from './AgendaItem.astro'
 const data = [
   {
     id: 1,
-    time: { start: '9:00 am', end: '10:00 am' },
+    time: { start: '8:00 am', end: '9:00 am' },
     title: 'Registration and Breakfast',
     description:
       '',
@@ -14,22 +14,22 @@ const data = [
   },
   {
     id: 2,
-    time: { start: '10:00 am', end: '10:15 am' },
+    time: { start: '9:00 am', end: '9:15 am' },
     title: 'Welcome and Opening Remarks',
     description:
       '',
     categories: ['session', 'speaker'],
-    speaker: 'Loren Mayor, Chief Operating Officer Andrew Wiley, Director, Partners in Conservation',
+    speaker: 'Andrew Wiley, Director, Partners in Conservation Julie Miller, Executive Vice President, Philanthropic Partnerships and Board Relations',
     day: 1,
   },
   {
     id: 3,
-    time: { start: '10:15 am', end: '11:00 am' },
-    title: 'Safeguarding a Future for Forests: Strategies for Nature, Climate, and People',
+    time: { start: '9:15 am', end: '10:00 am' },
+    title: 'President’s Report',
     description:
-      'From filtering the air we breathe and the water we drink to providing us with products we use every day—forests are essential for our survival. And these extraordinary ecosystems are also home to most of the world’s life on land. Yet we’re losing forests at alarming rates. Learn how WWF’s Forest team is working toward a future in which the world’s critical forests are conserved to sustain nature’s diversity, benefit our climate, and support human well-being.',
+      'Learn the latest on the state of global conservation from Carter Roberts, who will share his insights on WWF’s work to deliver the most effective and enduring conservation solutions for nature and for people.',
     categories: ['session', 'speaker'],
-    speaker: 'Kerry Cesareo, Senior Vice President, Forests',
+    speaker: 'Carter Roberts, President & CEO',
     day: 1,
   },
   {
