fixing agenda and testing for deployment 2.0

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -34,7 +34,7 @@ const data = [
   },
   {
     id: 4,
-    time: { start: '11:00 am', end: '11:15 am' },
+    time: { start: '10:00 am', end: '11:00 am' },
     title: 'Morning Break',
     description:
       '',
@@ -45,11 +45,11 @@ const data = [
   {
     id: 5,
     time: { start: '11:15 am', end: '12:30 pm' },
-    title: 'A Holistic Approach to Forest Protection: From Critical Landscapes to Global Strategies',
+    title: 'Securing Nature’s Future: Project Finance for Permanence & Namibia for Life',
     description:
-      'Confronting the diverse threats facing forests requires an innovative approach. Drawing on sound science and profound expertise, WWF collaborates with key partners in critical landscapes and around the globe. Together, we create and implement novel strategies to address the most pressing issues impacting forests. Hear about our work in the Amazon and Congo Basin, as well as on the forefronts of human health and corporate engagement.',
+      'Project Finance for Permanence (PFP) is an approach to conservation that ensures large systems of conservation areas are well-managed, sustainably financed, and benefit the communities who depend on them for decades. WWF and our partners, in a collaboration called Enduring Earth, are developing PFP initiatives around the world to conserve nature and support local communities, including Namibia, where community-led conservation has brought iconic wildlife like elephants and black rhinos back from the brink.',
     categories: ['session', 'speaker'],
-    speaker:'Meg Symington, Managing Director, Amazon. Linda Walker, Senior Director, Corporate Engagement, Forests. Allard Blom, Managing Director, Congo Basin. Annika Terrana, Director, Forests',
+    speaker:'Katie Zdilla, Senior Director of Durable Conservation and Finance',
     day: 1,
   },
   {
