testing for deployment

--- a/partner_symposium/src/components/Navigation.astro
+++ b/partner_symposium/src/components/Navigation.astro
@@ -8,7 +8,7 @@ const { footer = false } = Astro.props
 <div id="main-navigation" class="is-desktop py-8">
   <div class="container flex-col items-center">
     {!footer && <a href="/" class="flex items-center gap-2 !no-underline">
-      <img src={(await import('/Users/kayceemartin/work/Partner-Symposium/partner_symposium/public/PartnerSymposium_yellow bk[45].jpg')).default} alt="WWF Partner Symposium logo" width="500" class="mb-4" />
+      <img src={(await import('/PartnerSymposium_yellow_bk45.jpg')).default} alt="WWF Partner Symposium logo" width="500" class="mb-4" />
       <span class="font-bold hidden">WWF Partner Symposium</span>
     </a>}
     <div class="wrapper">
