finsihed with day 1 agenda content changes

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -44,7 +44,7 @@ const data = [
   },
   {
     id: 5,
-    time: { start: '11:15 am', end: '12:30 pm' },
+    time: { start: '11:15 am', end: '12:15 pm' },
     title: 'Securing Nature’s Future: Project Finance for Permanence & Namibia for Life',
     description:
       'Project Finance for Permanence (PFP) is an approach to conservation that ensures large systems of conservation areas are well-managed, sustainably financed, and benefit the communities who depend on them for decades. WWF and our partners, in a collaboration called Enduring Earth, are developing PFP initiatives around the world to conserve nature and support local communities, including Namibia, where community-led conservation has brought iconic wildlife like elephants and black rhinos back from the brink.',
@@ -54,25 +54,25 @@ const data = [
   },
   {
     id: 6,
-    time: { start: '12:30 pm', end: '1:45 pm' },
-    title: 'Lunch and Learn',
+    time: { start: '12:15 pm', end: '1:30 pm' },
+    title: 'Networking Lunch',
     description: '',
     categories: ['food', 'speaker'],
-    speaker: 'Debra Kathman, Senior Director, Gift Planning. Karl Egloff, Director, Conservation Travel',
+    speaker: '',
     day: 1,
   },
   {
     id: 8,
-    time: { start: '1:45pm', end: '2:30pm' },
-    title: 'Healthy Oceans for the Planet, People, Prosperity, and Peace',
-    description: "When oceans are healthy, the planet flourishes and people thrive. Now, as the connection between the health of our global seas and climate change is ever present and more political attention and public and private sector resources are devoted to ocean conservation than ever before, WWF has a renewed approach to protecting and restoring our oceans. Learn how WWF takes an integrated approach to ocean conservation, combining place-based seascape conservation work with global-scale initiatives.",
+    time: { start: '1:30pm', end: '2:45pm' },
+    title: 'The Next Generation of Conservation: Building Momentum for Lasting Change',
+    description: "",
     categories: ['sesssion','info'],
-    speaker: 'Johan Bergenas, Senior Vice President, Oceans',
+    speaker: 'Megan Franci, Gift Planning Specialist Danielle Artis, Philanthropy Manager, Partners in Conservation Katy Fenn, Director, Brand Engagement and Education, WWF-USAlex Nichols-Vinueza, Director, Food Loss & Waste Jessica Leung, Director, Belonging and Employee Experience Sammi Lin, Program Associate, Policy and US Government Affairs Niccola Somers, Senior Specialist, Boundless Fellowship Program',
     day: 1,
   },
   {
     id: 9,
-    time: { start: '2:30pm', end: '2:45pm' },
+    time: { start: '2:45pm', end: '3:00pm' },
     title: 'Afternoon Break',
     description: "",
     categories: ['info'],
@@ -80,28 +80,29 @@ const data = [
   },
   {
     id: 10,
-    time: { start: '2:45pm', end: '3:30pm' },
-    title: 'Initiatives for Impact: The Future of Fish and the Impacts of Resource Conflict',
-    description: "The seas provide life to billions, and nothing represents this relationship better than fish. Climate change is expected to exacerbate fisheries resource conflict by intensifying competition for dwindling fish resources, which will create new challenges for fishing communities that rely on these resources for their livelihoods. Learn how this scenario is playing out in the seascapes around the world and explore the potential for new ideas, partnerships, and science to address these issues and mitigate the impacts of future fisheries conflict.",
+    time: { start: '3:00pm', end: '3:30pm' },
+    title: 'Afternoon Adventures: Leave a Legacy, Travel the World',
+    description: "",
     categories: ['session','info'],
-    speaker: 'Sarah Glaser, Senior Director, Oceans Futures',
+    speaker: 'Debra Kathman Senior Director, Gift Planning Karl Egloff, Director, Conservation Travel ',
     day: 1,
   },
   {
     id: 11,
     time: { start: '3:30pm', end: '4:30pm' },
-    title: 'Initiatives for Impact: Alaska’s Native Communities and Ocean Conservation',
-    description: "As the Arctic region is experiencing some of the most rapid and severe changes on the planet, Alaska Native communities are among the most vulnerable to the impacts of climate change. This panel discussion will focus on the ocean climate challenges facing Alaska Native communities from several generations of community members—from Elders who hold traditional knowledge about the impacts of climate change and adaptations, to youth ambassadors who bring fresh perspectives on the many benefits of technology and innovation. Discover how Native communities are working together to adapt and build resilience.",
+    title: 'Rangewide Conservation of Jaguars: The Road North',
+    description: "The largest native feline in the Americas, the jaguar faces ongoing threats from hunting and habitat loss due to deforestation. Learn about WWF’s jaguar conservation priorities and hear updates on impactful jaguar conservation projects taking place across the Americas. During this session, you’ll also hear about WWF's exciting work to bring jaguars back to the US, and discover how advancements in environmental DNA (eDNA) technology are helping determine how far jaguars may already roam across the Desert Southwest.",
     categories: ['session','info'],
-    speaker: 'Kyle Newman, Community Partnership Leader, WWF Arctic Program. Alexis Will, Marine Biologist, WWF Arctic Program. Delbert Pungowiyi, Sivungaq, Sivuqaq (St. Lawrence Island). Macy Rae Kenworthy, Arctic Youth Ambassador and Associate at the Alaska Conservation Foundation Megan Onders, Executive Director, Indigenous Peoples Council for Marine Mammals',
+    speaker: 'Leigh Henry, Director, Wildlife Policy, Wildlife Conservation Robin Naidoo, Lead Scientist for Wildlife Conservation',
     day: 1,
   },
   {
     id: 12,
-    time: { start: '4:30pm', end: '6:00pm' },
-    title: 'Closing Remarks and Networking Reception',
+    time: { start: '4:30pm', end: '4:45pm' },
+    title: 'Closing Remarks',
     description: "",
     categories: ['session','info'],
+    speaker: 'Loren Mayor, Chief Operating Officer',
     day: 1,
   },
   {
