all agenda items edited

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -107,59 +107,63 @@ const data = [
   },
   {
     id: 13,
-    time: { start: '8:00am', end: '8:45am' },
-    title: 'Breakfast',
+    time: { start: '4:45pm', end: '6:30pm' },
+    title: 'Networking Reception',
+    description: "",
+    categories: ['session','info'],
+    speaker: '',
+    day: 1,
+  },
+  {
+    id: 14,
+    time: { start: '8:30am', end: '9:15am' },
+    title: 'Arrival and Breakfast',
     description: "",
     categories: ['food','info'],
     day: 2,
   },
   {
-    id: 14,
-    time: { start: '8:45am'},
-    title: 'Shuttles depart for Capitol Hill',
+    id: 15,
+    time: { start: '9:15am', end:'9:30am'},
+    title: 'Welcome and Opening Remarks',
     description: "",
     categories: ['info'],
-    day: 2,
-  },
-  {
-    id: 15,
-    time: { start: '9:30am', end: '11:00am' },
-    title: `Ocean Policy: Strengthening Marine Ecosystem Resilience to Climate Change (location Wilson Center)`,
-    description: "Overfishing, pollution, coastal development, and a changing climate are increasing pressures on vulnerable marine ecosystems and the communities that depend upon them. The U.S. and partners must work to address these impacts and strengthen the resiliency of marine ecosystems now, so they can withstand the increasing pressures of a warming ocean and changing climate in the future. Join a panel of policy experts from WWF and partner organizations who will discuss policy solutions that strengthen marine ecosystem resilience to the impacts of climate change—now and for years to come. ",
-    categories: ['info'],
-    speakers: 'Carolyn Weiss, ICCF/Ocean Caucus Foundation - will provide an overview of some of their engagement to educate around ocean-related legislation on the Hill. Wilson Center - Polar Inst. Wilson Center - Dave Balton. WWF - Ryan Houlihan - will discuss WWF advocacy efforts to address plastics pollution. WWF - Arctic team and/or Ocean Futures or Fisheries team (TBD) (There may also be a tribal member from AK on the panel to talk about impacts they are seeing already as well.) ',
+    speaker: 'Andrew Wiley, Director, Partners in Conservation Loren Mayor, Chief Operating Officer',
     day: 2,
   },
   {
     id: 16,
-    time: { start: '11:00am', end: '12:30pm' },
-    title: 'Lunch',
-    description: "",
-    categories: ['food'],
+    time: { start: '9:30am', end: '10:30am' },
+    title: `Future Cities: The Beauty of Resilience`,
+    description: "The National Building Museum’s Future Cities initiative aims to amplify the inspiring stories of our shared urban experience. Cities are at the center of the national conversation around the interwoven themes of identity, community, and resilience. In this session we’ll explore key plotlines and processes for shaping the world we design and build to become beautifully resilient.",
+    categories: ['info'],
+    speakers: 'James Darius Ball, Director, Future Cities Initiative, National Building Museum',
     day: 2,
   },
   {
     id: 17,
-    time: { start: '12:30pm', end: '3:00pm' },
-    title: 'Tour of Sant Ocean Hall, National Museum of Natural History ',
+    time: { start: '10:30am', end: '10:345pm' },
+    title: 'Morning Break',
     description: "",
-    categories: ['session', 'info'],
+    categories: ['info'],
     day: 2,
   },
   {
     id: 18,
-    time: { start: '3:00pm'},
-    title: 'Symposium Ends',
-    description: "",
+    time: { start: '10:45pm', end: '12:15pm' },
+    title: ' Infrastructure: What’s Nature Got to Do With It?',
+    description: "Infrastructure underpins our societies, delivering the water we drink, the roads that connect us, and the electricity that powers our livelihoods. Yet it is one of the greatest drivers of habitat loss, degradation, and fragmentation worldwide, causing impacts such as blocking wildlife migration routes, affecting people's access to vital natural resources, weakening community resilience, and more. This session will explore how WWF is reaching across its teams to reimagine the future of infrastructure—one where infrastructure meets human needs and aspirations while allowing nature to thrive. ",
     categories: ['session', 'info'],
+    speakers:'Anita van Breda, Senior Director, Environment and Disaster Management Nilanga Jayasinghe, Manager, Asian Species, Wildlife Conservation Evan Freund, Senior Director, Sustainable Infrastructure & Finance',
     day: 2,
   },
   {
     id: 19,
-    time: { start: '5:30pm', end: '7:30pm'},
-    title: 'Optional Reception at Capitol Hill Ocean Week. Dirksen Senate Office Building ',
+    time: { start: '12:15pm'},
+    title: ' Closing Remarks and Farewell Lunch',
     description: "",
-    categories: ['food', 'info'],
+    categories: ['session', 'info'],
+    speakers:'Julie Miller, Executive Vice President, Philanthropic Partnerships and Board Relations ',
     day: 2,
   },
 ]
