updated agenda for 2025

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -4,7 +4,7 @@ import AgendaItem from './AgendaItem.astro'
 const data = [
   {
     id: 1,
-    time: { start: '8:00 am', end: '9:00 am' },
+    time: { start: '9:00 am', end: '10:00 am' },
     title: 'Registration and Breakfast',
     description:
       '',
@@ -14,27 +14,28 @@ const data = [
   },
   {
     id: 2,
-    time: { start: '9:00 am', end: '9:15 am' },
+    time: { start: '10:00 am', end: '10:15 am' },
     title: 'Welcome and Opening Remarks',
-    description:
-      '',
+    description: "",
     categories: ['session', 'speaker'],
-    speaker: 'Andrew Wiley, Director, Partners in Conservation Julie Miller, Executive Vice President, Philanthropic Partnerships and Board Relations',
+    speaker: 'Loren Mayor, Chief Operating Officer <br> Andrew Wiley, Director, Partners in Conservation',
+    speakerBio: ['#loren-mayor'],
     day: 1,
   },
   {
     id: 3,
-    time: { start: '9:15 am', end: '10:00 am' },
-    title: 'President’s Report',
+    time: { start: '10:15 am', end: '11:00 am' },
+    title: 'Safeguarding a Future for Forests: Strategies for Nature, Climate, and People',
     description:
-      'Learn the latest on the state of global conservation from Carter Roberts, who will share his insights on WWF’s work to deliver the most effective and enduring conservation solutions for nature and for people.',
+      'From filtering the air we breathe and the water we drink to providing us with products we use every day—forests are essential for our survival. And these extraordinary ecosystems are also home to most of the world’s life on land. Yet we’re losing forests at alarming rates. Learn how WWF’s Forest team is working toward a future in which the world’s critical forests are conserved to sustain nature’s diversity, benefit our climate, and support human well-being.',
     categories: ['session', 'speaker'],
-    speaker: 'Carter Roberts, President & CEO',
+    speaker: 'Kerry Cesareo, Senior Vice President, Forests',
+    speakerBio: ['#kerry-cesareo'],
     day: 1,
   },
   {
     id: 4,
-    time: { start: '10:00 am', end: '11:00 am' },
+    time: { start: '11:00 am', end: '11:15 am' },
     title: 'Morning Break',
     description:
       '',
@@ -44,35 +45,38 @@ const data = [
   },
   {
     id: 5,
-    time: { start: '11:15 am', end: '12:15 pm' },
-    title: 'Securing Nature’s Future: Project Finance for Permanence & Namibia for Life',
+    time: { start: '11:15 am', end: '12:30 pm' },
+    title: 'A Holistic Approach to Forest Protection: From Critical Landscapes to Global Strategies',
     description:
-      'Project Finance for Permanence (PFP) is an approach to conservation that ensures large systems of conservation areas are well-managed, sustainably financed, and benefit the communities who depend on them for decades. WWF and our partners, in a collaboration called Enduring Earth, are developing PFP initiatives around the world to conserve nature and support local communities, including Namibia, where community-led conservation has brought iconic wildlife like elephants and black rhinos back from the brink.',
+      'Confronting the diverse threats facing forests requires an innovative approach. Drawing on sound science and profound expertise, WWF collaborates with key partners in critical landscapes and around the globe. Together, we create and implement novel strategies to address the most pressing issues impacting forests. Hear about our work in the Amazon and Congo Basin, as well as on the forefronts of human health and corporate engagement.',
     categories: ['session', 'speaker'],
-    speaker:'Katie Zdilla, Senior Director of Durable Conservation and Finance',
+    speaker:'Allard Blom, Managing Director, Congo Basin <br> Annika Terrana, Director, Forests <br> Meg Symington, Managing Director, Amazon <br> Linda Walker, Senior Director, Corporate Engagement, Forests' ,
+    speakerBio: ['#allard-blom'],
     day: 1,
   },
   {
     id: 6,
-    time: { start: '12:15 pm', end: '1:30 pm' },
-    title: 'Networking Lunch',
-    description: '',
+    time: { start: '12:30 pm', end: '1:45 pm' },
+    title: 'Lunch and Learn',
+    description: "",
     categories: ['food', 'speaker'],
-    speaker: '',
+    speaker: 'Ariana Bowman, Gift Planning <br> Karl Egloff, Director, Conservation Travel',
+    speakerBio: ['#ariana-bowman'],
     day: 1,
   },
   {
     id: 8,
-    time: { start: '1:30pm', end: '2:45pm' },
-    title: 'The Next Generation of Conservation: Building Momentum for Lasting Change',
-    description: "",
+    time: { start: '1:45 pm', end: '2:30 pm' },
+    title: 'Healthy Oceans for the Planet, People, Prosperity, and Peace',
+    description: "When oceans are healthy, the planet flourishes and people thrive. Now, as the connection between the health of our global seas and climate change is ever present and more political attention and public and private sector resources are devoted to ocean conservation than ever before, WWF has a renewed approach to protecting and restoring our oceans. Learn how WWF takes an integrated approach to ocean conservation, combining place-based seascape conservation work with global-scale initiatives.",
     categories: ['sesssion','info'],
-    speaker: 'Megan Franci, Gift Planning Specialist Danielle Artis, Philanthropy Manager, Partners in Conservation Katy Fenn, Director, Brand Engagement and Education, WWF-USAlex Nichols-Vinueza, Director, Food Loss & Waste Jessica Leung, Director, Belonging and Employee Experience Sammi Lin, Program Associate, Policy and US Government Affairs Niccola Somers, Senior Specialist, Boundless Fellowship Program',
+    speaker: 'Johan Bergenas, Senior Vice President, Oceans',
+    speakerBio: ['#johan-bergenas'],
     day: 1,
   },
   {
     id: 9,
-    time: { start: '2:45pm', end: '3:00pm' },
+    time: { start: '2:30 pm', end: '2:45 pm' },
     title: 'Afternoon Break',
     description: "",
     categories: ['info'],
@@ -80,90 +84,88 @@ const data = [
   },
   {
     id: 10,
-    time: { start: '3:00pm', end: '3:30pm' },
-    title: 'Afternoon Adventures: Leave a Legacy, Travel the World',
-    description: "",
+    time: { start: '2:45 pm', end: '3:30 pm' },
+    title: 'Initiatives for Impact: The Future of Fish and the Impacts of Resource Conflict',
+    description: "The seas provide life to billions, and nothing represents this relationship better than fish. Climate change is expected to exacerbate fisheries resource conflict by intensifying competition for dwindling fish resources, which will create new challenges for fishing communities that rely on these resources for their livelihoods. Learn how this scenario is playing out in the seascapes around the world and explore the potential for new ideas, partnerships, and science to address these issues and mitigate the impacts of future fisheries conflict.",
     categories: ['session','info'],
-    speaker: 'Debra Kathman Senior Director, Gift Planning Karl Egloff, Director, Conservation Travel ',
+    speaker: 'Sarah Glaser, Senior Director, Oceans Futures',
+    speakerBio: ['#sarah-glaser'],
     day: 1,
   },
   {
     id: 11,
-    time: { start: '3:30pm', end: '4:30pm' },
-    title: 'Rangewide Conservation of Jaguars: The Road North',
-    description: "The largest native feline in the Americas, the jaguar faces ongoing threats from hunting and habitat loss due to deforestation. Learn about WWF’s jaguar conservation priorities and hear updates on impactful jaguar conservation projects taking place across the Americas. During this session, you’ll also hear about WWF's exciting work to bring jaguars back to the US, and discover how advancements in environmental DNA (eDNA) technology are helping determine how far jaguars may already roam across the Desert Southwest.",
+    time: { start: '3:30 pm', end: '4:30 pm' },
+    title: 'Initiatives for Impact: Alaska’s Native Communities and Ocean Conservation',
+    description: "As the Arctic region is experiencing some of the most rapid and severe changes on the planet, Alaska Native communities are among the most vulnerable to the impacts of climate change. This panel discussion will focus on the ocean climate challenges facing Alaska Native communities from several generations of community members—from Elders who hold traditional knowledge about the impacts of climate change and adaptations, to youth ambassadors who bring fresh perspectives on the many benefits of technology and innovation. Discover how Native communities are working together to adapt and build resilience.",
     categories: ['session','info'],
-    speaker: 'Leigh Henry, Director, Wildlife Policy, Wildlife Conservation Robin Naidoo, Lead Scientist for Wildlife Conservation',
+    speaker: 'Kyle Newman, Community Partnership Leader, WWF Arctic Program <br> Dr. Alexis Will, Marine Biologist, WWF Arctic Program <br> Macy Rae Kenworthy, Arctic Youth Ambassador and Associate at the Alaska Conservation Foundation <br> Megan Onders, Executive Director, Indigenous Peoples Council for Marine Mammals <br> Delbert Pungowiyi, Alaska Tribal Leader, Sivungaq, Sivuqaq (St. Lawrence Island)',
+    speakerBio: ['#kyle-newman'],
     day: 1,
   },
   {
     id: 12,
-    time: { start: '4:30pm', end: '4:45pm' },
-    title: 'Closing Remarks',
+    time: { start: '4:30 pm', end: '6:00 pm' },
+    title: 'Closing Remarks and Networking Reception',
     description: "",
     categories: ['session','info'],
-    speaker: 'Loren Mayor, Chief Operating Officer',
     day: 1,
   },
   {
     id: 13,
-    time: { start: '4:45pm', end: '6:30pm' },
-    title: 'Networking Reception',
-    description: "",
-    categories: ['session','info'],
-    speaker: '',
-    day: 1,
-  },
-  {
-    id: 14,
-    time: { start: '8:30am', end: '9:15am' },
-    title: 'Arrival and Breakfast',
+    time: { start: '8:00 am', end: '8:30 am' },
+    title: 'Breakfast at WWF HQ',
     description: "",
     categories: ['food','info'],
     day: 2,
   },
   {
-    id: 15,
-    time: { start: '9:15am', end:'9:30am'},
-    title: 'Welcome and Opening Remarks',
+    id: 14,
+    time: { start: '8:30 am'},
+    title: 'Shuttles depart for the Woodrow Wilson International Center for Scholars',
     description: "",
     categories: ['info'],
-    speaker: 'Andrew Wiley, Director, Partners in Conservation Loren Mayor, Chief Operating Officer',
+    day: 2,
+  },
+  {
+    id: 15,
+    time: { start: '9:30 am', end: '11:00 am' },
+    title: `Ocean Policy: Strengthening Marine Ecosystem Resilience to Climate Change`,
+    description: "Overfishing, pollution, coastal development, and a changing climate are increasing pressures on vulnerable marine ecosystems and the communities that depend upon them. The U.S. and partners must work to address these impacts and strengthen the resiliency of marine ecosystems now, so they can withstand the increasing pressures of a warming ocean and changing climate in the future. Join a panel of policy experts from WWF and partner organizations who will discuss policy solutions that strengthen marine ecosystem resilience to the impacts of climate change—now and for years to come. ",
+    categories: ['info'],
+    speaker: 'Opening Remarks by Will Gartshore, Senior Director, Policy and Government Affairs, WWF <br> Moderated by Lauren Herzer Risi, Program Director, Environmental Change and Security Program, Wilson Center <br> Delbert Pungowiyi, Alaska Tribal Leader, Sivungaq, Sivuqaq (St. Lawrence Island) <br> Rebecca Pincus, Director, Polar Institute, Wilson Center <br> Carolyn Weis, Program Director, International Conservation Caucus Foundation <br> Ryan Houlihan, Senior Policy Lead for Plastics, WWF',
+    speakerBio: ['#will-gartshore'],
     day: 2,
   },
   {
     id: 16,
-    time: { start: '9:30am', end: '10:30am' },
-    title: `Future Cities: The Beauty of Resilience`,
-    description: "The National Building Museum’s Future Cities initiative aims to amplify the inspiring stories of our shared urban experience. Cities are at the center of the national conversation around the interwoven themes of identity, community, and resilience. In this session we’ll explore key plotlines and processes for shaping the world we design and build to become beautifully resilient.",
-    categories: ['info'],
-    speakers: 'James Darius Ball, Director, Future Cities Initiative, National Building Museum',
+    time: { start: '11:00 am', end: '12:30 pm' },
+    title: 'Lunch at the Ronald Reagan Building',
+    description: "",
+    categories: ['food'],
     day: 2,
   },
   {
     id: 17,
-    time: { start: '10:30am', end: '10:345pm' },
-    title: 'Morning Break',
+    time: { start: '12:30 pm', end: '3:00 pm' },
+    title: 'Tour of Sant Ocean Hall, <em>National Museum of Natural History</em>',
     description: "",
-    categories: ['info'],
+    categories: ['session', 'info'],
     day: 2,
   },
   {
     id: 18,
-    time: { start: '10:45pm', end: '12:15pm' },
-    title: ' Infrastructure: What’s Nature Got to Do With It?',
-    description: "Infrastructure underpins our societies, delivering the water we drink, the roads that connect us, and the electricity that powers our livelihoods. Yet it is one of the greatest drivers of habitat loss, degradation, and fragmentation worldwide, causing impacts such as blocking wildlife migration routes, affecting people's access to vital natural resources, weakening community resilience, and more. This session will explore how WWF is reaching across its teams to reimagine the future of infrastructure—one where infrastructure meets human needs and aspirations while allowing nature to thrive. ",
+    time: { start: '3:00 pm'},
+    title: 'Symposium Ends – Shuttles depart for WWF HQ',
+    description: "",
     categories: ['session', 'info'],
-    speakers:'Anita van Breda, Senior Director, Environment and Disaster Management Nilanga Jayasinghe, Manager, Asian Species, Wildlife Conservation Evan Freund, Senior Director, Sustainable Infrastructure & Finance',
     day: 2,
   },
   {
     id: 19,
-    time: { start: '12:15pm'},
-    title: ' Closing Remarks and Farewell Lunch',
+    time: { start: '5:30 pm', end: '7:30 pm'},
+    title: 'Optional Reception at Capitol Hill Ocean Week. <em>Dirksen Senate Office Building</em>',
     description: "",
-    categories: ['session', 'info'],
-    speakers:'Julie Miller, Executive Vice President, Philanthropic Partnerships and Board Relations ',
+    categories: ['food', 'info'],
     day: 2,
   },
 ]
