--- a/partner_symposium/src/components/BeforeTheDay.astro
+++ b/partner_symposium/src/components/BeforeTheDay.astro
@@ -2,7 +2,7 @@
 import {Accordion, AccordionItem} from 'accessible-astro-components';
 ---
     <section class="before-the-day" id="before">
-      <h2 class="mb-2">Before the day</h2>
+      <h2 class="mb-2">Before the Event</h2>
       <h3 class="text-2xl mb-4">Things to know leading up to the Partner Symposium</h3>
       <div class="mx-auto max-w-2xl">
       <Accordion>
